Started fabric service implementation