@@ -34,8 +34,8 @@ public abstract class CredentialsLookupRepoTest {
         update(lookup);
 
         // then: the credentials can be found by their name
-        var credentialsId = findCredentialsIdByName(lookup.getName());
-        assertThat(credentialsId).isEqualTo(lookup.getId());
+        var credentials = findCredentialsByName(lookup.getName());
+        assertThat(credentials).isEqualTo(lookup);
 
         // when: saving another lookup with another ID
         var anotherLookup = CredentialsLookup.of(
@@ -46,11 +46,12 @@ public abstract class CredentialsLookupRepoTest {
         update(anotherLookup);
 
         // then: the first lookup can still be found by their name
-        var foundCredentialsId = findCredentialsIdByName(lookup.getName());
+        var foundCredentials = findCredentialsByName(lookup.getName());
+        assertThat(foundCredentials).isEqualTo(lookup);
 
         // and: the second lookup can be found by their name
-        var foundAnotherCredentialsId = findCredentialsIdByName(anotherLookup.getName());
-        assertThat(foundAnotherCredentialsId).isEqualTo(anotherLookup.getId());
+        var foundAnotherCredentials = findCredentialsByName(anotherLookup.getName());
+        assertThat(foundAnotherCredentials).isEqualTo(anotherLookup);
 
         // when: updating the first lookup since the name changed
         var updatedLookup = CredentialsLookup.of(
@@ -61,12 +62,12 @@ public abstract class CredentialsLookupRepoTest {
         update(updatedLookup);
 
         // then: the first lookup can no longer be found by their old name
-        var notFoundCredentialsId = findCredentialsIdByName(lookup.getName());
-        assertThat(notFoundCredentialsId).isNull();
+        var notFoundCredentials = findCredentialsByName(lookup.getName());
+        assertThat(notFoundCredentials).isNull();
 
         // and: the first lookup can be found by their new name
-        var foundUpdatedCredentialsId = findCredentialsIdByName(updatedLookup.getName());
-        assertThat(foundUpdatedCredentialsId).isEqualTo(lookup.getId());
+        var foundUpdatedCredentials = findCredentialsByName(updatedLookup.getName());
+        assertThat(foundUpdatedCredentials).isEqualTo(updatedLookup);
     }
 
     @Test
@@ -82,15 +83,15 @@ public abstract class CredentialsLookupRepoTest {
         update(lookup);
 
         // then: the credentials can be found by their name
-        var credentialsId = findCredentialsIdByName(lookup.getName());
-        assertThat(credentialsId).isEqualTo(lookup.getId());
+        var credentials = findCredentialsByName(lookup.getName());
+        assertThat(credentials).isEqualTo(lookup);
 
         // when: removing the lookup
         remove(lookup.getId());
 
         // then: the credentials can no longer be found by their name
-        var notFoundCredentialsId = findCredentialsIdByName(lookup.getName());
-        assertThat(notFoundCredentialsId).isNull();
+        var notFoundCredentials = findCredentialsByName(lookup.getName());
+        assertThat(notFoundCredentials).isNull();
     }
 
     @Test
@@ -104,9 +105,9 @@ public abstract class CredentialsLookupRepoTest {
         update(lookup);
 
         // then: the credentials can be found by their user ID
-        var credentialsIds = findCredentialsIdByUserId(lookup.getUserId());
-        assertThat(credentialsIds.size()).isEqualTo(1);
-        assertThat(credentialsIds.get(0)).isEqualTo(lookup.getId());
+        var credentials = findCredentialsByUserId(lookup.getUserId());
+        assertThat(credentials.size()).isEqualTo(1);
+        assertThat(credentials.getFirst().getId()).isEqualTo(lookup.getId());
 
         // when: saving another lookup with the same user ID
         var anotherLookup = CredentialsLookup.of(
@@ -117,9 +118,9 @@ public abstract class CredentialsLookupRepoTest {
         update(anotherLookup);
 
         // then: there are two credentials with the same user ID
-        credentialsIds = findCredentialsIdByUserId(lookup.getUserId());
-        assertThat(credentialsIds.size()).isEqualTo(2);
-        assertThat(credentialsIds).contains(lookup.getId(), anotherLookup.getId());
+        credentials = findCredentialsByUserId(lookup.getUserId());
+        assertThat(credentials.size()).isEqualTo(2);
+        assertThat(credentials.stream().map(CredentialsLookup::getId)).contains(lookup.getId(), anotherLookup.getId());
 
         // when: saving another lookup with another user ID
         var yetAnotherLookup = CredentialsLookup.of(
@@ -130,33 +131,33 @@ public abstract class CredentialsLookupRepoTest {
         update(yetAnotherLookup);
 
         // then: there are still two credentials with the same user ID
-        credentialsIds = findCredentialsIdByUserId(lookup.getUserId());
-        assertThat(credentialsIds.size()).isEqualTo(2);
+        credentials = findCredentialsByUserId(lookup.getUserId());
+        assertThat(credentials.size()).isEqualTo(2);
 
         // and: there is one credential with the other user ID
-        credentialsIds = findCredentialsIdByUserId(UserId.of("ANOTHER_USER_ID"));
-        assertThat(credentialsIds.size()).isEqualTo(1);
-        assertThat(credentialsIds.get(0)).isEqualTo(yetAnotherLookup.getId());
+        credentials = findCredentialsByUserId(UserId.of("ANOTHER_USER_ID"));
+        assertThat(credentials.size()).isEqualTo(1);
+        assertThat(credentials.getFirst().getId()).isEqualTo(yetAnotherLookup.getId());
 
         // when: removing the credentials with the first user ID
         remove(lookup.getId());
         remove(anotherLookup.getId());
 
         // then: there is no credential with the first user ID
-        credentialsIds = findCredentialsIdByUserId(lookup.getUserId());
-        assertThat(credentialsIds.size()).isEqualTo(0);
+        credentials = findCredentialsByUserId(lookup.getUserId());
+        assertThat(credentials.size()).isEqualTo(0);
     }
 
     private void update(CredentialsLookup lookup) {
         repo.update(lookup).block();
     }
 
-    private CredentialsId findCredentialsIdByName(Name name) {
-        return repo.findCredentialsIdByName(name).block();
+    private CredentialsLookup findCredentialsByName(Name name) {
+        return repo.findCredentialsByName(name).block();
     }
 
-    private List<CredentialsId> findCredentialsIdByUserId(UserId userId) {
-        return repo.findCredentialsIdByUserId(userId).collectList().block();
+    private List<CredentialsLookup> findCredentialsByUserId(UserId userId) {
+        return repo.findCredentialsByUserId(userId).collectList().block();
     }
 
     private void remove(CredentialsId id) {
